Modificado title y div

--- a/archivo_t6.html
+++ b/archivo_t6.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hola Mundo</title>
+<title>DAW - Tarea 6</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -22,7 +22,7 @@
 </style>
 </head>
 <body>
-  <div class="mensaje">Hola Mundo</div>
+  <div class="mensaje">¡Hola, Rafael! </div>
 </body>
 </html>
 
